EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==3/14/2009==
Trevius: SoF - Tradeskill/Augment Combines in tradeskill containers/objects now works, but currently bugs players when they close the window.

==3/13/2009==
Trevius: SoF - Added a few more encodes/decodes to resolve more slot change issues related to the addition of the Power Source Slot
Trevius: SoF - Ammo now depletes properly when used.  Probably some other minor issues resolved by this change as well.

==3/12/2009==
Trevius: SoF - AAs can now be trained and will update without needing to zone. Point Spent is still wrong.
Trevius: SoF - Char Select now shows Primary and Secondary items properly.

==3/10/2009==
Trevius: SoF - PC to PC/NPC Trading now works, though canceling a trade will bug the character and require them to zone or relog
Trevius: SoF - Players can now sell to merchants
Trevius: SoF - Corrected a bug introduced in Revision 376 that was causing single stackable items to not be stackable

==3/09/2009==
Trevius: SoF - Buffs and debuffs now last for the correct duration.

==3/08/2009==
Trevius: SoF - Corrected Item Struct to fix the issue with non-stackable items showing up as being stackable
Trevius: SoF - Identified an unknown field in Item Serialization as being item charges and set it accordingly so that items should now show accurate current charges.
Trevius/Xinu: SoF - Adjusted a few opcodes for more accuracy - No visible change yet

==3/07/2009==
Trevius: SoF - AAs now show up in the AA window, but do not give bonuses yet.
Trevius: SoF - Spent AA points are partially showing up, but still need work.
Trevius: SoF - Updated some grouping structs, but grouping still isn't working just yet
Trevius: SoF - Buffs can now be clicked off, but the duration still isn't working for them
cavedude: Added new AA, group, and raid EXP multiplier rules. Removed the associated variables.